# observability-assistant-orchestrator

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
config/: config.yaml
src/orchestrator/: __init__.py  __main__.py  main.py
src/orchestrator/a2a/: __init__.py  client.py  models.py  translator.py
src/orchestrator/agui/: __init__.py  encoder.py  handler.py  models.py  router.py
src/orchestrator/config/: settings.py
src/orchestrator/utils/: __init__.py  errors.py  logging.py
tests/: __init__.py  conftest.py
tests/unit/: test_a2a_models.py  test_agui_models.py  test_api.py  test_encoder.py  test_errors.py  test_handler.py  test_translator.py
