[project]
name = "observability-assistant-orchestrator"
version = "0.0.1"
description = "A2A Observability Orchestrator with AG-UI interface"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Alberto Falossi" }
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",

    # Async HTTP client
    "httpx>=0.27.0",

    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Configuration
    "pyyaml>=6.0.0",

    # A2A Protocol SDK
    "a2a-sdk>=0.2.0",

    # Google ADK (optional, for future integration)
    "google-adk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# Allow camelCase variables in model files (required for JSON serialization)
"src/orchestrator/agui/models.py" = ["N815"]
"src/orchestrator/a2a/models.py" = ["N815"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
